# tree_iterator

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  bfs_adaptor.h  dfs_adaptor.h  optimized_ptr_stack.h  tree.h  tree_item.h
Tests/: CMakeLists.txt  test.cpp  test_algorithms.cpp  test_correctness.cpp  test_move_copy.cpp  test_performance.cpp
include/: bfs_adaptor.h  optimized_ptr_stack.h  tree.h  tree_item.h
